# backend_main

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  models.config  potatoes.h5  render.yaml  requirements.txt  streamlit_app.py
api/: Dockerfile  main.py  requirements.txt
api/saved_models/1/variables/: variables.index
fastapi_app/: Dockerfile  main.py  render.yaml  requirements.txt
flask_app/: main.py  pyproject.toml  requirements.txt
flask_app/templates/: index.html
frontend/public/: index.html
frontend/src/: home.js
heroku/: main.py  requirements.txt
saved_models/1/: saved_model.pb
saved_models/1/variables/: variables.data-00000-of-00001
streamlit_app/: .dockerignore  Dockerfile  app.py
training/: models.config  requirements.txt  training.ipynb
training/.ipynb_checkpoints/: training-checkpoint.ipynb
