[tool.poetry]
name = "potato-disease-classification"
version = "0.1.0"
description = "A Flask-based web app for potato leaf disease classification"
authors = ["Lokesh Kumar lokeshkumar.engineer@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"  
flask = "3.1.0"
uvicorn = "0.32.1"
tensorflow = "2.10.0"
numpy = "1.26.4"
pillow = "11.1.0"
requests = "2.32.3"
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
